Revert "change flex-flow to column wrap; set fixed container height"
This reverts commit 239b68c7171f0e339eaea9ba609a97bb5e945cb3.

--- a/css-flexbox-layout/css/flexbox.css
+++ b/css-flexbox-layout/css/flexbox.css
@@ -4,7 +4,4 @@
 
 .container {
   display: flex;
-  flex-wrap: wrap;
-  flex-direction: column;
-  height: 280px;
 }
